# SweepJEPA

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: track1.yaml  track2.yaml
docs/: PROPOSAL.md  STATUS.md
scripts/: download_datasets.sh  eval.py  pretrain_jepa.py  run_ablations.py  run_track2_comparison.py  smoke_test_backbones.py  train_pose.py  train_track1.py
src/: __init__.py
src/shared/: __init__.py  config.py  data.py  splits.py  synthetic.py
src/track1/: __init__.py  conformal.py  encoder.py  losses.py  metrics.py  mil.py  pipeline.py
src/track2/: __init__.py  jepa.py  losses.py  pose_estimator.py  stage_c.py  sweep_reconstruction.py  tusrec.py
tests/: test_conformal.py  test_data.py  test_encoder.py  test_jepa.py  test_losses.py  test_metrics.py  test_mil.py  test_mil_variants.py  test_pipeline.py  test_pose_estimation.py  test_pose_geometry.py  test_splits.py  test_stage_c.py  test_synthetic.py
